# stepper_servo

./: .gitignore  .gitmodules  Cargo.toml  StepperServo_VSCode.code-workspace  readme.md
.cargo/: config
doc/: Encoder_analysis.ods  encoderOutput.txt
src/: currentControl.rs  current_control.rs  current_output.rs  display.rs  encoder_input.rs  main.rs  position_control.rs  position_input.rs
src/pid/: mod.rs  util.rs
stepper_servo/: Cargo.toml  StepperServo_VSCode.code-workspace  __openocd.cfg  openocd.gdb  readme.md
stepper_servo/.cargo/: config
stepper_servo/doc/: Encoder_analysis.ods
stepper_servo/src/: AS5045_position.rs  current_output.rs  display.rs  encoder_input.rs  main.rs
stepper_servo/src/AS5045/: mod.rs
