[package]
name = "stm32_blink"
version = "0.1.0"
authors = ["Supagait <gklomphaar@hotmail.com>"]
edition = "2018"

[profile.release]
# optimize for size ('z' would optimize even more)
#opt-level = 's'
# link with link time optimization (lto).
#lto = true
# enable debugging in release mode.
#debug = true


[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
# provides access to low level ARM CPU registers (used for delay)
cortex-m = "0.6.2"
# provides startup code for the ARM CPU
cortex-m-rt = "0.6.11"
# provies a panic-handler (halting cpu)
# (required when not using stdlib)
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]

# Gives us access to the STM32F1 registers
# stm32f1 = {version = "0.6.0", features = ["stm32f103", "rt"]}