[package]
name = "stm32_blink"
version = "0.1.0"
authors = ["Supagait <gklomphaar@hotmail.com>"]
edition = "2018"

[profile.release]
opt-level = 's'
lto = true
#debug = true

[profile.dev]
opt-level = 1

[dependencies]
embedded-hal = "0.2.3"
# provides access to low level ARM CPU registers (used for delay)
cortex-m = "0.6.2"
# provides startup code for the ARM CPU
cortex-m-rt = "0.6.11"
# provies a panic-handler (halting cpu)
# (required when not using stdlib)
panic-halt = "0.2.0"
# Higher level drivers/functionality
cortex-m-rtfm = "0.5.1"
rotary-encoder-hal = "0.2.1"
ssd1306 = "0.3.1"
#embedded-graphics = "0.6.0"

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]


# Gives us access to the STM32F1 registers
# stm32f1 = {version = "0.6.0", features = ["stm32f103", "rt"]}